--- a/gallery.html
+++ b/gallery.html
@@ -2,68 +2,95 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <link href="css/grid.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="js/scripts.js"></script>
+    <!-- Link to JS files -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/scripts.js"></script>
     <title>Gallery - Doggie Walks</title>
   </head>
   <body>
-    <header class="headergrid">
-      <a href="index.html"><img class="logo" src="images/logo.svg"></img></a>
-      <nav class="nav">
-          <a href="index.html">Home</a>
-          <div class="dropdown">
-            <a href="about.html"><button class="dropbtn">About Us
-              <i class="fa fa-caret-down"></i>
-            </button></a>
-            <div class="dropdown-content">
-              <a href="team.html">Meet The Team</a>
-            </div>
-          </div>
-          <a href="services.html">Services</a>
-          <a href="gallery.html">Gallery</a>
-          <a href="contact.html">Contact Us</a>
-      </nav>
-      <h1 class="title">Doggie Walks</h1>
-      <h2 class="tag">Helping Our Animal Friends One Paw At A Time</h2>
-      <a href="contact.html"><img class="dog" src="images/Promo.svg"></img></a>
-    </header>
-    <article>
-      <section>
-        <h1 class="heading">Welcome To Doggie Walks</h1>
-        <p class="paragraph">We are commited to providing professional and personal care to your beloved four-legged friends.
-        We are based in Macclesfield and we offer exciting and stimulating walks all over the beautiful Chesire countryside. We gaurantee your dog will come home tired and content.
-        We recognise every dog’s needs are different and how busy daily life can be. With services starting from only £10 we ensure that you the best possible service to suit the needs of both you and your pooch.
-        We are also fully insured for everybody’s peace of mind, for more information on this please contact us or email at info@doggiewalks.co.uk</p>
+    <header>
+      <section class="headgrid">
+        <a class="logo" href="index.html"><img src="img/logo.svg"></img></a>
+        <nav class="hidden  " id="dropdown">
+          <a class="dropbtn" href="about.html">
+            About Us
+          </a>
+          <a class="dropbtn" href="team.html">
+            Meet The Team
+          </a>
+        </nav>
+        <nav>
+          <a href="index.html">
+            Home
+          </a>
+          <a class="dropmenu">
+            About &#x25BE;
+          </a>
+          <a href="services.html">
+            Services
+          </a>
+          <a class="active" href="gallery.html">
+            Gallery
+          </a>
+          <a href="contact.html">
+            Contact Us
+          </a>
+        </nav>
+        <a href="tel:0161-883-1122"><img src="img/call.svg" class="call"  alt="Call Us"></a>
+        <h1 class="headtitle">Doggie Walks</h1>
+        <h2 class="headtag">Helping Our Animal Friends One Paw At A Time</h2>
+        <a class="adddog" href="contact.html"><img src="img/Promo.svg"></img></a>
       </section>
-      <section class="locations">
-        <h3>Where We Are</h3>
-        <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
+      </header>
+    <article class="sart">
+      <section class="gal-txt">
+        <h1>Gallery</h1>
+        <p>Every week is a busy week! Checkout how much fun our guests have within our day care centres!</p>
+        <p class="smallprint">All photos have been taken with consent of every owner<p>
       </section>
-      <section class="times">
-        <h3>Opening Times</h3>
-        <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
+      <section class="gallerycontainer">
+        <section class="gallerywrap">
+          <section class="gallery">
+            <div class="gal-img" id="img1" alt="Labrador"></div>
+            <div class="gal-img" id="img2" alt="Labrador"></div>
+            <div class="gal-img" id="img3" alt="Labrador"></div>
+            <div class="gal-img" id="img4" alt="Labrador"></div>
+            <div class="gal-img" id="img5" alt="Labrador"></div>
+            <div class="gal-img" id="img6" alt="Labrador"></div>
+            <div class="gal-img" id="img7" alt="Labrador"></div>
+            <div class="gal-img" id="img8" alt="Labrador"></div>
+            <div class="gal-img" id="img9" alt="Labrador"></div>
+            <div class="gal-img" id="img10" alt="Labrador"></div>
+            <div class="gal-img" id="img11" alt="Labrador"></div>
+            <div class="gal-img" id="img12" alt="Labrador"></div>
+          </section>
+        </section>
       </section>
-      <section>
-        <h2 class="heading2">
-        <figure class="sitting">
-          <figcaption>Pet Sitting (Puppy and Elderly)</figcaption>
-        </figure>
-        <figure class="smallpet">
-          <figcaption>Small Pet Visits</figcaption>
-        </figure>
-        <figure class="overnight">
-          <figcaption>Overnight Pet Sittings</figcaption>
-        </figure>
     </article>
+    <footer>
+      <section class="left">
+        <p>Phone: 0161 883 1122</p>
+        <p>Email: info@doggiewalks.co.uk</p>
+      </section>
+      <section class="footerlogo">
+        <a href="index.html"><img src="img/logo.svg"></img></a>
+      </section>
+      <section class="right">
+          <h3>Opening Times</h3>
+          <ul>
+            <li>Monday - Friday</li>
+            <li>8am - 7pm</li>
+            <li>Saturday</li>
+            <li>8am - 5pm</li>
+            <li>Sunday</li>
+            <li>12pm - 5pm</li>
+          </ul>
+        </p>
+      </section>
+    </footer>
   </body>
 </html>
