Added a mobile nav and mobile grid to index header

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <header>
       <section class="headgrid">
         <a class="logo" href="index.html"><img src="img/logo.svg"></img></a>
+        <nav class="mob-nav">
+          <span id="open">&#9776;</span>
+        </nav>
         <nav class="hidden  " id="dropdown">
           <a class="dropbtn" href="about.html">
             About Us
@@ -24,7 +27,7 @@
             Meet The Team
           </a>
         </nav>
-        <nav>
+        <nav class="desk-nav">
           <a class="active" href="index.html">
             Home
           </a>
@@ -42,6 +45,7 @@
           </a>
         </nav>
         <a href="tel:0161-883-1122"><img src="img/call.svg" class="call"  alt="Call Us"></a>
+        <a href="tel:0161-883-1122" class="callmob"><img src="img/callmob.svg" alt="Call Us"></a>
         <h1 class="headtitle">Doggie Walks</h1>
         <h2 class="headtag">Helping Our Animal Friends One Paw At A Time</h2>
         <a class="adddog" href="contact.html"><img src="img/Promo.svg"></img></a>
