--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <!-- Link to JS files -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/scripts.js"></script>
+    <!-- Change the colour of the top of mobile browser. -->
+    <!-- Chrome, Firefox OS and Opera -->
+    <meta name="theme-color" content="#eb7859">
+    <!-- Windows Phone -->
+    <meta name="msapplication-navbutton-color" content="#eb7859">
+    <!-- iOS Safari -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="#eb7859">
+
     <title>Doggie Walks</title>
   </head>
   <body>
