Added side nav styles and event listeners.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
         <nav class="mob-nav">
           <span id="open">&#9776;</span>
         </nav>
+        <nav class="sidenav">
+          <aside class="hide" id="close">&#10006;</aside>
+          <a class="active" href="index.html">Home</a>
+          <a href="about.html">About Us</a>
+          <a href="team.html">Meet The Team</a>
+          <a href="services.html">Services</a>
+          <a href="gallery.html">Gallery</a>
+          <a href="contact.html">Contact Us</a>
+        </nav>
         <nav class="hidden  " id="dropdown">
           <a class="dropbtn" href="about.html">
             About Us
