Team page completed for mobile view

--- a/team.html
+++ b/team.html
@@ -74,25 +74,29 @@
       </section>
       <section class="teamsection">
         <section class="teamlist lori">
-          <h1>Lori Hanson</h1>
-          <h2>Founder of Doggie Walks</h2>
+          <h1 class="desk">Lori Hanson</h1>
+          <h2 class="desk">Founder of Doggie Walks</h2>
           <img class="team" src="img/team/lori.jpg" alt="Lori Hanson">
         </section>
+        <h1 class="mobile lor">Lori Hanson</h1>
         <section class="teamlist gary">
-          <h1>Gary Simpson</h1>
-          <h2>Team Manager</h2>
+          <h1 class="desk">Gary Simpson</h1>
+          <h2 class="desk">Team Manager</h2>
           <img class="team" src="img/team/gary.jpg" alt="Gary Simpson">
         </section>
+        <h1 class="mobile gar">Gary Simpson</h1>
         <section class="teamlist rebecca">
-          <h1>Rebecca Harrison</h1>
-          <h2>professional Dog Walker</h2>
+          <h1 class="desk">Rebecca Harrison</h1>
+          <h2 class="desk">professional Dog Walker</h2>
           <img class="team" src="img/team/rebecca.jpg" alt="Rebecca Harrison">
         </section>
+        <h1 class="mobile reb">Rebecca Harrison</h1>
         <section class="teamlist joanna">
-          <h1>Joanna Davies</h1>
-          <h2>Professional Dog Walker</h2>
+          <h1 class="desk">Joanna Davies</h1>
+          <h2 class="desk">Professional Dog Walker</h2>
           <img class="team" src="img/team/joanna.jpg" alt="Joanna Davies">
         </section>
+        <h1 class="mobile joa">Joanna Davies</h1>
       </section>
     </article>
     <footer>
