fixed styling on dropdown menu nav

--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
           <a href="gallery.html">Gallery</a>
           <a class="active" href="contact.html">Contact Us</a>
         </nav>
-        <nav class="hidden  " id="dropdown">
+        <nav class="hidden desk-nav" id="dropdown">
           <a class="dropbtn" href="about.html">
             About Us
           </a>
