--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <a href="gallery.html">Gallery</a>
           <a href="contact.html">Contact Us</a>
         </nav>
-        <nav class="hidden  " id="dropdown">
+        <nav class="hidden desk-nav" id="dropdown">
           <a class="dropbtn" href="about.html">
             About Us
           </a>
