Added flex to gallery page, removed unused code.

--- a/gallery.html
+++ b/gallery.html
@@ -68,7 +68,7 @@
       </section>
       </header>
     <article class="sart">
-      <section class="gal-txt">
+      <section class="flex">
         <h1>Gallery</h1>
         <p>Every week is a busy week! Checkout how much fun our guests have within our day care centres!</p>
         <p class="smallprint">All photos have been taken with consent of every owner<p>
