Fixed alt text on images

--- a/gallery.html
+++ b/gallery.html
@@ -76,18 +76,18 @@
       <section class="gallerycontainer">
         <section class="gallerywrap">
           <section class="gallery">
-            <div class="gal-img" id="img1" alt="Labrador"></div>
-            <div class="gal-img" id="img2" alt="Labrador"></div>
-            <div class="gal-img" id="img3" alt="Labrador"></div>
-            <div class="gal-img" id="img4" alt="Labrador"></div>
-            <div class="gal-img" id="img5" alt="Labrador"></div>
+            <div class="gal-img" id="img1" alt="Cavalier"></div>
+            <div class="gal-img" id="img2" alt="Mal-Shi"></div>
+            <div class="gal-img" id="img3" alt="Corgi"></div>
+            <div class="gal-img" id="img4" alt="Jack Russell"></div>
+            <div class="gal-img" id="img5" alt="Bassador"></div>
             <div class="gal-img" id="img6" alt="Labrador"></div>
-            <div class="gal-img" id="img7" alt="Labrador"></div>
-            <div class="gal-img" id="img8" alt="Labrador"></div>
-            <div class="gal-img" id="img9" alt="Labrador"></div>
-            <div class="gal-img" id="img10" alt="Labrador"></div>
-            <div class="gal-img" id="img11" alt="Labrador"></div>
-            <div class="gal-img" id="img12" alt="Labrador"></div>
+            <div class="gal-img" id="img7" alt="German Shepherd"></div>
+            <div class="gal-img" id="img8" alt="Dog"></div>
+            <div class="gal-img" id="img9" alt="Dog"></div>
+            <div class="gal-img" id="img10" alt="Long Haired Dog with tongue out"></div>
+            <div class="gal-img" id="img11" alt="French Bulldog"></div>
+            <div class="gal-img" id="img12" alt="Puppy"></div>
           </section>
         </section>
       </section>
