--- a/gallery.html
+++ b/gallery.html
@@ -81,7 +81,7 @@
             <div class="gal-img" id="img3" alt="Corgi"></div>
             <div class="gal-img" id="img4" alt="Jack Russell"></div>
             <div class="gal-img" id="img5" alt="Bassador"></div>
-            <div class="gal-img" id="img6" alt="Labrador"></div>
+            <div class="gal-img" id="img6" alt="Labradoodle"></div>
             <div class="gal-img" id="img7" alt="German Shepherd"></div>
             <div class="gal-img" id="img8" alt="Dog"></div>
             <div class="gal-img" id="img9" alt="Dog"></div>
