Fixed spelling error, made days bold and removed bullet from hours in open times.

--- a/index.html
+++ b/index.html
@@ -90,18 +90,18 @@
           <aside class="opentime">
             <h3>Opening Times</h3>
             <ul>
-              <li>Monday - Friday</li>
-              <li>8am - 7pm</li>
-              <li>Saturday</li>
-              <li>8am - 5pm</li>
-              <li>Sunday</li>
-              <li>12pm - 5pm</li>
+              <li class="day">Monday - Friday</li>
+              <li class="hour">8am - 7pm</li>
+              <li class="day">Saturday</li>
+              <li class="hour">8am - 5pm</li>
+              <li class="day">Sunday</li>
+              <li class="hour">12pm - 5pm</li>
             </ul>
           </aside>
         </section>
       </section>
       <section class="index2">
-        <h2 class="title">We Also offer different services</h2>
+        <h2 class="title">We also offer different services</h2>
         <a href="contact.html">
           <section class="offers sitting">
             <h1>Pet Sitting (Puppy and Elderly)</h1>
