Added missing word

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <h1>Welcome To Doggie Walks</h1>
             <p>We are commited to providing professional and personal care to your beloved four-legged friends.</p>
             <p>We are based in Macclesfield and we offer exciting and stimulating walks all over the beautiful Cheshire countryside. We gaurantee your dog will come home tired and content.</p>
-            <p>We recognise every dog’s needs are different and how busy daily life can be. With services starting from only £10 we ensure that you the best possible service to suit the needs of both you and your pooch.</p>
+            <p>We recognise every dog’s needs are different and how busy daily life can be. With services starting from only £10 we ensure that you receive the best possible service to suit the needs of both you and your pooch.</p>
             <p>We are also fully insured for everybody’s peace of mind, for more information on this please <span>contact us</span> or email at info@doggiewalks.co.uk</p>
           </section>
           <aside class="locations">
